[package]
name = "acnh_additive_stuff"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
crc32fast = "1.5.0"
skyline = "0.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
